--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,22 @@ body{
   
 }
 
+/* footer section */
 
+.footer{
+  /* position: relative; */
+  text-align: center;
+  margin-top: 2rem;
+  padding: 30px; 
+  background-color: #060606; 
+  color: #fff;
+  bottom: 0;
+  width: 100%;
+  height: 40vh;
+  
+  
+  
+}
 
 
 
